feature: GetComponents
