# backend/docs/swagger.json
@@ -7,6 +7,40 @@
         "version": "1.0"
     },
     "paths": {
+        "/components": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Component"
+                ],
+                "summary": "全栄養素取得 API",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.GetComponentsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ingredients": {
             "get": {
                 "consumes": [
@@ -43,6 +77,17 @@
         }
     },
     "definitions": {
+        "controller.GetComponentsResponse": {
+            "type": "object",
+            "properties": {
+                "components": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Component"
+                    }
+                }
+            }
+        },
         "controller.GetIngredientsResponse": {
             "type": "object",
             "properties": {
@@ -51,6 +96,17 @@
                     "items": {
                         "$ref": "#/definitions/entity.Ingredient"
                     }
+                }
+            }
+        },
+        "entity.Component": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
