# backend/entity/component.go
@@ -1,0 +1,6 @@
+package entity
+
+type Component struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+}
